--- a/DuplicatedCodeTests/RefactoringTests.csproj
+++ b/DuplicatedCodeTests/RefactoringTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BycicleDriverTests.cs" />
     <Compile Include="BycicleTests.cs" />
     <Compile Include="CarDriverTests.cs" />
+    <Compile Include="CarTests.cs" />
     <Compile Include="CreditTransactionTests.cs" />
     <Compile Include="InsuranceQuoteTests.cs" />
     <Compile Include="DriverTests.cs" />
