--- a/Refactoring/Refactoring.csproj
+++ b/Refactoring/Refactoring.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Account.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="CarDriver.cs" />
+    <Compile Include="CreditAccount.cs" />
     <Compile Include="CreditTransaction.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="DebitTransaction.cs" />
