--- a/Refactoring/Refactoring.csproj
+++ b/Refactoring/Refactoring.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CreditAccount.cs" />
     <Compile Include="CreditTransaction.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="DebitAccount.cs" />
     <Compile Include="DebitTransaction.cs" />
     <Compile Include="InsuranceQuote.cs" />
     <Compile Include="Driver.cs" />
