created subclass mixed account with debit and credit operations and correct failing unit tests

--- a/Refactoring/Refactoring.csproj
+++ b/Refactoring/Refactoring.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DebitTransaction.cs" />
     <Compile Include="InsuranceQuote.cs" />
     <Compile Include="Driver.cs" />
+    <Compile Include="MixedAccount.cs" />
     <Compile Include="Statement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
