--- a/Refactoring/Refactoring.csproj
+++ b/Refactoring/Refactoring.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="Address.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="CarDriver.cs" />
     <Compile Include="CreditAccount.cs" />
