--- a/Refactoring/Refactoring.csproj
+++ b/Refactoring/Refactoring.csproj
@@ -56,6 +56,8 @@
     <Compile Include="InterestRate.cs" />
     <Compile Include="License.cs" />
     <Compile Include="MixedAccount.cs" />
+    <Compile Include="Motorcycle.cs" />
+    <Compile Include="MotorcycleDriver.cs" />
     <Compile Include="Statement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
