--- a/RefactoringTests/RefactoringTests.csproj
+++ b/RefactoringTests/RefactoringTests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="CreditTransactionTests.cs" />
     <Compile Include="InsuranceQuoteTests.cs" />
     <Compile Include="DriverTests.cs" />
+    <Compile Include="LongTermInvestmentTransactionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DebitTransactionTests.cs" />
     <Compile Include="StatementTests.cs" />
